Modified details, compatible with Java 8